<resources>
    <string name="app_name">MarvelApp</string>
    <string name="comic_title">New Releases</string>
    <string name="saved">Favourites</string>
    <string name="grid">Grid</string>
    <string name="settings">Settings</string>
    <string name="image_transition">image_transition</string>
    <string name="saved_list">Clear my list</string>
    <string name="saved_list_summary">All saved comic will be deleted permanently</string>
    <string name="cache">Clear cache</string>
    <string name="cache_summary">Cache data will be deleted</string>
    <string name="feedback">Send feedback</string>
    <string name="feedback_summary">Let us know your thoughts about the app</string>
    <string name="pref_query_limit">Number of columns</string>
    <string name="pref_query_limit_summ">Number of columns depends on this value</string>
    <string name="delete_cache">Delete cache</string>
    <string name="delete_sure_cache">Are you sure you want to clear the cache?</string>
    <string name="deleteCache">Cache deleted</string>
    <string name="owner_email">ledanny.yang@gmail.com</string>
    <string name="marvelapp_feedback">Marvel App Feedback</string>
    <string name="send_email">Send email using:</string>
    <string name="delete_watchlist">Delete list</string>
    <string name="delete_sure">Are you sure you want to delete your list?</string>
    <string name="list_clear">List deleted</string>
    <string name="columns_updated">Columns changed to</string>
    <string name="setting_toolbar">Settings</string>
    <string name="comic_info_title">Comic Info</string>
    <string name="description">DESCRIPTION</string>
    <string name="preview">Preview</string>
    <string name="diamondcode_sample">JAN01019</string>
    <string name="title_sample">Deadpool (2019) #1000</string>
    <string name="price_sample">$4.99</string>
    <string name="upc_sample">5948392749-00111</string>
    <string name="isbn_sample">79483792019992</string>
    <string name="overview_sample">Has it really been 100 issues since Deadpool #900? Who cares! Deadpool has done it again in this compendium of face offs against urban cannibals, underage hit men, mimes from outer space, and Lady Luck herself!</string>
    <string name="upc_title">UPC:</string>
    <string name="isbn_title">ISBN: </string>
    <string name="writtenby">Written By:</string>
    <string name="writtenby_sample">Carl Burgos</string>
    <string name="coverby_sample">Frank R. Paul</string>
    <string name="artby_sample">Paul Gustavson</string>
    <string name="releasedate_sample">2019-10-02</string>
    <string name="pages_sample">92</string>
    <string name="pages_title">PAGES:</string>
    <string name="credits">CREDITS</string>
    <string name="onsaledate_title">ON SALE DATE:</string>
    <string name="price_title">PRICE:</string>
    <string name="connectedToInternet">Connected to network</string>
    <string name="noconnection">No network connection</string>
    <string name="emptylist">No comics found</string>
    <string name="tip_add">Check your connection and restart the App</string>
    <string name="tip_save">Try long pressing a comic to add it as favourite</string>
    <string name="no_favourite">Empty list</string>
</resources>
