<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ComicInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/comic_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/comic_info_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/comicsampleblur">

                <ImageView
                    android:id="@+id/comic_info_poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/comicsample"
                    android:paddingVertical="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_below="@+id/comic_info_poster">
                    <TextView
                        android:id="@+id/comic_info_diamondcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diamondcode_sample"
                        android:fontFamily="@font/robotobold"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_verylarge"
                        android:gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/comic_info_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_sample"
                        android:textSize="@dimen/text_large"
                        android:gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/comic_info_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price_sample"
                        android:textSize="@dimen/text_large"
                        android:gravity="center_horizontal"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textSize="@dimen/text_large"/>

                <TextView
                    android:id="@+id/comic_info_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview_sample"
                    android:textSize="@dimen/text_medium"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/writtenby"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/writtenby_sample"
                        android:textSize="@dimen/text_medium"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/coverby"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/coverby_sample"
                        android:textSize="@dimen/text_medium"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/artby"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/artby_sample"
                        android:textSize="@dimen/text_medium"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preview"
                android:textSize="@dimen/text_large"
                android:paddingHorizontal="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comic_info_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upc_title"
                        android:textSize="@dimen/text_medium"/>
                    <TextView
                        android:id="@+id/comic_info_upc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upc_sample"
                        android:textSize="@dimen/text_medium"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/isbn_title"
                        android:textSize="@dimen/text_medium"/>
                    <TextView
                        android:id="@+id/comic_info_isbn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/isbn_sample"
                        android:textSize="@dimen/text_medium"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>